--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
   "dependencies": {
     "@types/react": "^16.7.13",
     "@types/react-dom": "^16.0.11",
-    "node-sass": "^4.10.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "sass-loader": "^7.1.0"
+    "react-dom": "^16.6.3"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^2.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.2.2",
+    "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   }
 }
