--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
+    "noEmitHelpers": true, //
     "target": "es5",
     "jsx": "react",
     "lib": [
